# DroneDetect

./: README.md
Deploy/: CMakeLists.txt  DetectManager.cpp  DetectManager.h  build_debug_proj.bat  build_proj.bat  build_release_proj.bat  get_anchors.cpp  get_anchors.h  sptj.cpp  sptj.h
